--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,9 @@ spring:
     url: 'jdbc:postgresql://localhost:${COUNTRY_DB_PORT:6432}/country'
     username: ${COUNTRY_DB_USER:postgres}
     password: ${COUNTRY_DB_PASSWORD:secret}
+  graphql:
+    graphiql:
+      enabled: true
 
 app:
   api:
